--- a/modulo-1/curriculo/css/style.css
+++ b/modulo-1/curriculo/css/style.css
@@ -1,9 +1,38 @@
-body{
-  /* background-color: red; */
+* {
+  /* box-sizing: border-box;
+  outline: 1px solid limegreen !important; */
+  font-family: "Poppins", sans-serif;
 }
-
-.profile-picture{
+#my-info {
+  display: flex;
+  /* flex-direction: row; */
+  /* justify-content: center; Este centra los elementos horizontalmente */
+  align-items: center;
+}
+/* .my-info__name{
+  font-family: 'Fasthand', cursive;
+} */
+.my-info__avatar {
   height: 100px;
   width: 100px;
   border-radius: 50%;
+  /* margin-right: 30px; */
+  margin: 30px 30px 30px 0px;
+}
+.my-info__contact-info {
+  /* display: inline-block; */
+  padding: 5px 10px;
+  margin: 0px;
+}
+.my-info__contact h1 {
+  margin-top: 0px;
+  padding-left: 10px;
+}
+.my-grade__professional{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.my-grade__others{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
